--- a/src/main/java/com/github/kilianB/example/localFilePlayer/DemoPlayer.fxml
+++ b/src/main/java/com/github/kilianB/example/localFilePlayer/DemoPlayer.fxml
@@ -86,6 +86,15 @@
       </FlowPane>
    </bottom>
    <right>
-      <JFXTreeTableView fx:id="musicLibraryView" BorderPane.alignment="CENTER" />
+      <VBox>
+         <children>
+            <JFXTextField fx:id="searchLocalMusic" labelFloat="true" promptText="Search:">
+               <VBox.margin>
+                  <Insets bottom="12.0" left="8.0" right="8.0" top="12.0" />
+               </VBox.margin>
+            </JFXTextField>
+            <JFXTreeTableView fx:id="musicLibraryView" prefHeight="692.0" prefWidth="248.0" BorderPane.alignment="CENTER" />
+         </children>
+      </VBox>
    </right>
 </BorderPane>
